# Test1

exam_developer/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  developer_exam_exec  main
exam_developer/src/: main.c
exam_developer/src/developer/: developer.c  developer.h
exam_developer/src/developer_group/: developer_group.c  developer_group.h
